Collections.sort vs List.sort